[REGRESSION] qtmux: Produces broken fragmented file when finalizing with EOS
Since !643 (merged) qtmux create invalid fragmented files when finalized with eos
:
[gst-build] ➜ isomp4 git:(hlsfmp4) ✗ gst-launch-1.0 videotestsrc num-buffers=100 ! video/x-raw,format=I420 ! x264enc ! s. mp4mux name=s fragment-duration=1000 ! filesink location=test.mp4 && GST_DEBUG=2 gst-play-1.0 test.mp4
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
Redistribute latency...
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
Got EOS from element "pipeline0".
Execution ended after 0:00:00.085450210
Setting pipeline to NULL ...
Freeing pipeline ...
Press 'k' to see a list of keyboard shortcuts.
Now playing /home/thiblahute/devel//gst-build/gst-plugins-good/gst/isomp4/test.mp4
0:00:00.017491996 358531 0x26afa70 WARN basesrc gstbasesrc.c:3688:gst_base_src_start_complete:<source> pad not activated yet
0:00:00.017688253 358531 0x26afa70 WARN basesrc gstbasesrc.c:3688:gst_base_src_start_complete:<source> pad not activated yet
0:00:00.030472303 358531 0x26b7300 WARN qtdemux qtdemux_types.c:246:qtdemux_type_get: unknown QuickTime node type pasp
0:00:00.030583942 358531 0x26b7300 WARN qtdemux qtdemux.c:537:gst_qtdemux_pull_atom:<qtdemux0> atom has bogus size 8390876146459213844
0:00:00.030636821 358531 0x26b7300 WARN qtdemux qtdemux.c:495:gst_qtdemux_post_no_playable_stream_error:<qtdemux0> error: This file contains no playable streams.
0:00:00.030644615 358531 0x26b7300 WARN qtdemux qtdemux.c:495:gst_qtdemux_post_no_playable_stream_error:<qtdemux0> error: no known streams found
0:00:00.030697484 358531 0x26b7300 WARN qtdemux qtdemux.c:495:gst_qtdemux_post_no_playable_stream_error:<qtdemux0> error: This file contains no playable streams.
0:00:00.030704958 358531 0x26b7300 WARN qtdemux qtdemux.c:495:gst_qtdemux_post_no_playable_stream_error:<qtdemux0> error: no known streams found
ERROR This file contains no playable streams. for file:///home/thiblahute/devel/gst-build/gst-plugins-good/gst/isomp4/test.mp4
ERROR debug information: ../subprojects/gst-plugins-good/gst/isomp4/qtdemux.c(495): gst_qtdemux_post_no_playable_stream_error (): /GstPlayBin:playbin/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstQTDemux:qtdemux0:
no known streams found
Reached end of play list.
finalizing the file without eos doesn't create that issue.
Marking as blocker as this exact pipeline works with 1.18.
cc: @ystreet
Edited by Thibault Saunier